--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <select id="templateSelect"></select>
         <div class="inline">
           <button id="reloadTemplates" class="secondary" title="Перечитать templates/index.json">Обновить список</button>
-          <a id="openTemplates" href="./templates/" target="_blank" class="hint">Открыть папку templates/</a>
         </div>
       </div>
       <input id="templateFiles" type="file" accept=".yaml,.yml" multiple class="hidden" />
@@ -83,7 +82,7 @@
     </div>
 
     <div class="footer">
-      проект сделан на скорую руку при помощи ИИ, все вопросы и ссылка —
+      проект сделан на скорую руку при помощи ИИ, все вопросы на гите  —
       <a href="https://github.com/mozaroc/clash-convertor-by-ai" target="_blank">GitHub</a>
       <br><br>
     </div>
